# synapse-project

./: .gitignore  meson.build  package-lock.json  package.json  uncrustify.gnu.cfg
lib/: CommonActions.vala  Match.vala  Query.vala  RelevancyBackendAlpha.vala  meson.build
plugins/TrackerPlugin/: meson.build
plugins/TrackerPlugin/src/: Main.vala
po/: LINGUAS
src/: Category.vala  Controller.vala  DataSink.vala  Keybindings.vala  Main.vala  PluginRegistry.vala  Utils.vala  Widgets.vala  meson.build
src/QueryHistory/: QueryHistory.vapi  meson.build  queryHistory.cpp  queryHistory.h  queryHistoryController.cpp  queryHistoryController.h
src/QueryHistory/ontologies/: 10-history.description  10-history.ontology
src/Themes/: PantheonView.vala
subprojects/: hat-trie.wrap
test/: meson.build
test/synapse/: TestSynapse.vala  meson.build
test/synapse/QueryHistory/: QueryHistoryInspector.vala  TestQueryHistory.vala
test/synapse/QueryHistory/data/: queryHistory.txt
